# qt_moc_generator

./: LICENSE  README.md  qt_generator.gni  qt_moc_generator.py
